--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
-p {
-    font-size: 20px;
+@import url(https://fonts.googleapis.com/css?family=Poppins);
+
+* {
+	background-color: rgb(148, 207, 255);
+}
+
+.box {
+	font-family: Poppins;
+	margin: auto;
+	background-color: rgb(0, 0, 0);
+	height: 100px;
+	width: 100px;
+	border-radius: 5px;
+	border: 1.5px solid black;
+	color: black;
+	background-color: white;
+	transition: box-shadow 200ms ease, transform 200ms ease;
+	box-shadow: 0px 0px 0 black;
+	position: relative;
+	text-align: center;
+	align-items: center;
+}
+
+.box:hover {
+	transform: translate(4px, -4px);
+	box-shadow: -8px 8px 0 black;
+}
+
+#one {
+	height: 40px;
+	top: 250px;
 }
