--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
 .box {
 	font-family: Poppins;
 	background-color: rgb(0, 0, 0);
-	height: 50px;
-	width: 50px;
+	height: 10vh;
+	width: 10vw;
 	border-radius: 5px;
 	border: 1.5px solid black;
 	color: black;
